# aoctool

./: Cargo.toml  README.md
day-template/: Cargo.toml
day-template/src/: lib.rs  main.rs
src/: lib.rs  main.rs
