[package]
name = "aoctool"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aocutil.git" }
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
path-absolutize = "3.0.14"
pathdiff = "0.2.1"
reqwest = { version = "0.11.16", features = [ "blocking", "gzip" ] }
serde = { version = "1.0.159", features = [ "derive" ] }
thiserror = "1.0.40"
tinytemplate = "1.2.1"
toml = "0.7.3"
toml_edit = "0.19.8"

[[bin]]
name = "aoc"
path = "src/main.rs"
