[package]
name = "aoctool"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aocutil.git" }
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
path-absolutize = "3.1.1"
pathdiff = "0.2.3"
reqwest = { version = "0.11.27", features = ["blocking", "gzip"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "1.0.69"
time = { version = "0.3.37", features = ["local-offset"] }
tinytemplate = "1.2.1"
toml = "0.8.19"
toml_edit = "0.21.1"

[[bin]]
name = "aoc"
path = "src/main.rs"
